# Imilya-Minds

./: README.md
mypro/cpp-search-app/: CMakeLists.txt  build_and_run.sh  demo_features.md
mypro/cpp-search-app/include/: LoadingScreen.h  MainWindow.h  OfflineQADatabase.h  ResultsWidget.h  SearchHistory.h  SearchResult.h
mypro/cpp-search-app/src/: LoadingScreen.cpp  MainWindow.cpp  OfflineQADatabase.cpp  ResultsWidget.cpp  SearchHistory.cpp  main.cpp
